--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,10 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
+    implementation "com.squareup.retrofit2:converter-scalars:2.9.0"
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
+
 //    implementation "com.squareup.moshi:moshi:$moshi_version"
 //    implementation "com.squareup.moshi:moshi-kotlin:$moshi_version"
 //    kapt "com.squareup.moshi:moshi-kotlin-codegen:$moshi_version"
