--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
+    implementation("com.squareup.moshi:moshi-kotlin:1.12.0")
 
 //    implementation "com.squareup.moshi:moshi:$moshi_version"
 //    implementation "com.squareup.moshi:moshi-kotlin:$moshi_version"
