--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -37,6 +39,11 @@ android {
 }
 
 dependencies {
+    def room_version = "2.5.0"
+
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
 
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
@@ -47,14 +54,13 @@ dependencies {
     implementation 'androidx.databinding:databinding-runtime:7.4.2'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
     implementation("com.squareup.moshi:moshi-kotlin:1.12.0")
 
-//    implementation "com.squareup.moshi:moshi:$moshi_version"
-//    implementation "com.squareup.moshi:moshi-kotlin:$moshi_version"
-//    kapt "com.squareup.moshi:moshi-kotlin-codegen:$moshi_version"
+}
+
+kapt {
+    generateStubs = true
+    correctErrorTypes = true
 }
