--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,8 @@ android {
 }
 
 dependencies {
-    def room_version = "2.5.0"
+    implementation 'androidx.core:core-ktx:1.9.0'
+    def room_version = "2.5.1"
 
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
