--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ android {
 
 dependencies {
     implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'com.google.android.gms:play-services-location:19.0.1'
     def room_version = "2.5.1"
 
     implementation "androidx.room:room-runtime:$room_version"
@@ -59,6 +60,7 @@ dependencies {
     implementation "com.squareup.moshi:moshi-kotlin:1.12.0"
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+
 
     implementation 'com.google.android.material:material:1.8.0'
 
