--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,8 @@ dependencies {
 
     implementation 'org.osmdroid:osmdroid-android:6.1.13'
 
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
 //    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.0"
 //    implementation "androidx.activity:activity-ktx:2.6.0"
 
