--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,8 @@ dependencies {
 
     implementation 'com.squareup.picasso:picasso:2.71828'
 
+    implementation 'com.google.code.gson:gson:2.9.0'
+
 //    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.0"
 //    implementation "androidx.activity:activity-ktx:2.6.0"
 
